--- a/package.json
+++ b/package.json
@@ -7,18 +7,23 @@
     "start": "vite",
     "dev": "vite",
     "build": "vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "test": "vitest"
   },
   "license": "MIT",
   "devDependencies": {
     "autoprefixer": "^10.4.19",
+    "jsdom": "^24.0.0",
     "postcss": "^8.4.38",
     "sass": "^1.75.0",
     "solid-devtools": "*",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5",
     "vite": "^5.2.10",
-    "vite-plugin-solid": "^2.10.2"
+    "vite-plugin-solid": "^2.10.2",
+    "vite-plugin-test": "^0.0.5",
+    "vitest": "^1.5.2",
+    "vitest-canvas-mock": "^0.3.3"
   },
   "dependencies": {
     "rxjs": "^7.8.1",
